[package]
name = "commit-poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4.1"
num-integer = "0.1.45"
num-bigint = "0.4.3"
num-traits = "0.2.15"
colored = "2.0.0"
rand = "0.8.5"
git2 = "0.17.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
directories = "5.0.0"
fs4 = "0.6.3"
anyhow = "1.0.70"
