[package]
name = "commit-poker"
version = "0.1.0"
edition = "2021"

[lib]
name = "commit_poker"

[[bin]]
name = "commit-poker"
path = "src/bin/commit_poker.rs"

[[bin]]
name = "commit-poker-util"
path = "src/bin/commit_poker_util.rs"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
directories = "5.0.0"
fs4 = "0.6.3"
git2 = "0.17.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
